* done with basic scenario refactor to configs * add more detailed tasks to high levels

--- a/todo
+++ b/todo
@@ -1,11 +1,18 @@
 quick fixes:
   move stuff into configs (yaml)
-    * scenario setup
+    (done) python3 conversion
+    (done) scenario setup
+    * prettify scenario setup stdout
+    * get scenario selection menu to derive from scenarios.yml
+    * need method to take list of countries and test posture
     * map setup
-    * cards
+  refactor cards
+    * tie setup events to removal of cards
+    * needs a dsl instead of per card logic
   extract board elements into Board class
     * state
-    * state change methods
+      * state change methods
+      * need to convert 'board tracking' variables in scenario setup to 'board tracking' dependent methods.
   extract game rules and enforcement into GameEngine
     * stick mechanics from card in board class
   extract jihadist ai into jihadist bot class
