--- a/todo
+++ b/todo
@@ -2,17 +2,16 @@ quick fixes:
   move stuff into configs (yaml)
     (done) python3 conversion
     (done) scenario setup
+    (done) need method to take list of countries and test posture
     * prettify scenario setup stdout
     * get scenario selection menu to derive from scenarios.yml
-    * need method to take list of countries and test posture
     * map setup
   refactor cards
     * tie setup events to removal of cards
     * needs a dsl instead of per card logic
   extract board elements into Board class
-    * state
       * state change methods
-      * need to convert 'board tracking' variables in scenario setup to 'board tracking' dependent methods.
+      (done) need to convert 'board tracking' variables in scenario setup to 'board tracking' dependent methods.
   extract game rules and enforcement into GameEngine
     * stick mechanics from card in board class
   extract jihadist ai into jihadist bot class
