adding and checking off

--- a/todo
+++ b/todo
@@ -1,20 +1,36 @@
-quick fixes:
+refactor classes:
   move stuff into configs (yaml)
     (done) python3 conversion
     (done) scenario setup
     (done) need method to take list of countries and test posture
-    * prettify scenario setup stdout
-    * get scenario selection menu to derive from scenarios.yml
+    (done) get scenario selection menu to derive from scenarios.yml
     (done) map setup
   refactor cards
     * tie setup events to removal of cards
     * needs a dsl instead of per card logic
+
   extract board elements into Board class
       * state change methods
       (done) need to convert 'board tracking' variables in scenario setup to 'board tracking' dependent methods.
+      (done) boad summary
+      (done) country summary
+
   extract game rules and enforcement into GameEngine
     * stick mechanics from card in board class
+
   extract jihadist ai into jihadist bot class
+    * add in ai difficulty level
+
+  UICmd
+    (done) status
+    * deploy
+    * withdraw
+    * turn
+    * regime change
+    * war of ideas
+    * jihadist card plays
+    * prettify scenario setup stdout
+    * colorize output
 
 * fix saving
-* colorize output
+
