* refactor war of ideas * regime change, besieged, aid setters made saner

--- a/todo
+++ b/todo
@@ -33,10 +33,11 @@ refactor classes:
     (done) reassessment
     (done) alert
     (done) disrupt
-    * war of ideas
+    (done) war of ideas
+    * need display handler
+      * colorize output
     * turn
     * jihadist card plays
-    * colorize output
     * jihad actions
 * fix saving
 
